; ModuleID = '/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-data.c_revlist_lookup_left.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-data.c_revlist_lookup_left.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32, i32*, i32)* @revlist_lookup_left to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @revlist_lookup_left(i32 %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  store i64 -1, i64* %7, align 8
  %10 = load i32, i32* %6, align 4
  %11 = sext i32 %10 to i64
  store i64 %11, i64* %8, align 8
  br label %12

12:                                               ; preds = %32, %3
  %13 = load i64, i64* %8, align 8
  %14 = load i64, i64* %7, align 8
  %15 = sub nsw i64 %13, %14
  %16 = icmp sgt i64 %15, 1
  br i1 %16, label %17, label %33

17:                                               ; preds = %12
  %18 = load i64, i64* %8, align 8
  %19 = load i64, i64* %7, align 8
  %20 = add nsw i64 %18, %19
  %21 = ashr i64 %20, 1
  store i64 %21, i64* %9, align 8
  %22 = load i32*, i32** %5, align 8
  %23 = load i64, i64* %9, align 8
  %24 = call i32 @REVLIST_OBJECT_ID(i32* %22, i64 %23)
  %25 = load i32, i32* %4, align 4
  %26 = call i64 @object_id_less(i32 %24, i32 %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %17
  %29 = load i64, i64* %9, align 8
  store i64 %29, i64* %7, align 8
  br label %32

30:                                               ; preds = %17
  %31 = load i64, i64* %9, align 8
  store i64 %31, i64* %8, align 8
  br label %32

32:                                               ; preds = %30, %28
  br label %12

33:                                               ; preds = %12
  %34 = load i64, i64* %8, align 8
  ret i64 %34
}

declare dso_local i64 @object_id_less(i32, i32) #1

declare dso_local i32 @REVLIST_OBJECT_ID(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
